deployment-examples/kubernetes/worker-lre-cc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nativelink-worker-lre-cc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nativelink-worker-lre-cc
  template:
    metadata:
      labels:
        app: nativelink-worker-lre-cc
    spec:
      containers:
        - name: nativelink-worker-lre-cc
          image: "localhost:5001/nativelink-worker-lre-cc:local"
          volumeMounts:
            - name: worker-config
              mountPath: /worker.json
              subPath: worker.json
            - name: entrypoint
              mountPath: /entrypoint
          command: ["/entrypoint/entrypoint.sh"]
          args: ["/bin/nativelink", "/worker.json"]
      volumes:
        - name: entrypoint
          emptyDir: {}
        - name: worker-config
          configMap:
            name: worker
        - name: mnt
          hostPath:
            path: /mnt
