deployment-examples/kubernetes/worker-lre-java.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nativelink-worker-lre-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nativelink-worker-lre-java
  template:
    metadata:
      labels:
        app: nativelink-worker-lre-java
    spec:
      containers:
        - name: nativelink-worker-lre-java
          image: "localhost:5001/nativelink-worker-lre-java:local"
          volumeMounts:
            - name: worker-lre-java-config
              mountPath: /worker-lre-java.json
              subPath: worker-lre-java.json
          command: ["/bin/nativelink"]
          args: ["/worker-lre-java.json"]
      volumes:
        - name: worker-lre-java-config
          configMap:
            name: worker-lre-java
