deployment-examples/kubernetes/gateway.yaml
# TODO(aaronmondal): There should just be a single gateway. But that's currently
#                    bugged: https://github.com/cilium/cilium/issues/29099
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: insecure-cache
spec:
  gatewayClassName: cilium
  listeners:
    - name: insecure-cache
      protocol: HTTP
      port: 50051
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cache
spec:
  gatewayClassName: cilium
  listeners:
    - name: cache
      protocol: TLS
      port: 50071
      tls:
        mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prometheus
spec:
  gatewayClassName: cilium
  listeners:
    - name: prometheus
      protocol: HTTP
      port: 50061
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: scheduler
spec:
  gatewayClassName: cilium
  listeners:
    - name: scheduler
      protocol: HTTP
      port: 50052
